# FineLanguage

./: .gitignore  CMakeLists.txt  KeyWords.txt  Program.txt  README.md  main.cpp
src/lexicalAnalizer/: CMakeLists.txt  KeyWords.txt  lexer.cpp  lexer.cxx  lexer.h  main.cpp  trie.cxx
src/lexicalAnalyzer/: lexer.cxx  lexer.h  main.cpp  syntaxer.cxx  syntaxer.h  trie.h
src/semanticAnalyzer/structures/: iterationstack.cpp  iterationstack.h  test.cpp  tf.cpp  tf.h  tid.cpp  tid.h
src/syntaxAnalyzer/: syntaxer.cxx  syntaxer.h
